# universal_constructor_ai

./: README.md  pyproject.toml
src/universal_constructor/: crew.py  main.py
src/universal_constructor/config/: agents.yaml  tasks.yaml
